# agatha-lib

./: CMakeLists.txt  README  doxygen.conf
include/: agathaCallback.h  agathacallback.h  communicator.h  flags.h  player.h  response.h
src/: agathaCallback.cpp  agathacallback.cpp  buffer.cpp  buffer.h  callbacklauncher.cpp  callbacklauncher.h  communicator.cpp  player.cpp  playerserializerobject.cpp  playerserializerobject.h  request.cpp  request.h  requestmaker.cpp  requestmaker.h  responsegrabber.cpp  responsegrabber.cpp~  responsegrabber.h  responsegrabber.h~  threadManager.cpp  threadManager.h  threadmanager.cpp  threadmanager.h
tests/: CMakeLists.txt  README  playertest.cpp  playertest.h  requestmakertest.cpp  requestmakertest.h
